--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+        gatewayApp.factcheckClaim.claim   <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
             <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">Create or edit a Claim</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claim" for="field_claim">Claim</label>
                     <input type="text" class="form-control" name="claim" id="field_claim"
-                        [(ngModel)]="claim.claim" required/>
+                        [(ngModel)]="claim.claim" (change)="bindSlug($event)" required/>
                     <div [hidden]="!(editForm.controls.claim?.dirty && editForm.controls.claim?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.claim?.errors?.required" jhiTranslate="entity.validation.required">
@@ -95,7 +95,7 @@
                     <input type="text" class="form-control" name="reviewTagLine" id="field_reviewTagLine"
                         [(ngModel)]="claim.reviewTagLine" />
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.clientId" for="field_clientId">Client Id</label>
                     <input type="text" class="form-control" name="clientId" id="field_clientId"
                         [(ngModel)]="claim.clientId" required/>
@@ -150,7 +150,7 @@
                             This field should be a date and time.
                         </small>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.rating" for="field_rating">Rating</label>
