--- a/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
@@ -37,6 +37,10 @@
                 <dd>
                     <span>{{rating.lastUpdatedDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.factcheckRating.description">Description</span></dt>
+                <dd>
+                    <span>{{rating.description}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
