Removed unknown tag

--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-8">
-        gatewayApp.factcheckClaim.claim   <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
             <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">Create or edit a Claim</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
