--- a/src/main/webapp/app/entities/core/media/media-update.component.html
+++ b/src/main/webapp/app/entities/core/media/media-update.component.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="media.name" (change)="bindSlug($event)" required/>
+                        [(ngModel)]="media.name" (change)="bindSlug($event)" readonly/>
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.type" for="field_type">Type</label>
                     <input type="text" class="form-control" name="type" id="field_type"
-                        [(ngModel)]="media.type" required/>
+                        [(ngModel)]="media.type" readonly/>
                     <div [hidden]="!(editForm.controls.type?.dirty && editForm.controls.type?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.type?.errors?.required" jhiTranslate="entity.validation.required">
@@ -31,7 +31,7 @@
                         </small>
                     </div>
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.url" for="field_url">Url</label>
                     <input type="text" class="form-control" name="url" id="field_url"
                         [(ngModel)]="media.url" required/>
@@ -51,7 +51,7 @@
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.dimensions" for="field_dimensions">Dimensions</label>
                     <input type="text" class="form-control" name="dimensions" id="field_dimensions"
                         [(ngModel)]="media.dimensions" />
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.title" for="field_title">Title</label>
                     <input type="text" class="form-control" name="title" id="field_title"
@@ -75,7 +75,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.uploadedBy" for="field_uploadedBy">Uploaded By</label>
                     <input type="text" class="form-control" name="uploadedBy" id="field_uploadedBy"
-                        [(ngModel)]="media.uploadedBy" required/>
+                        [(ngModel)]="media.uploadedBy" readonly/>
                     <div [hidden]="!(editForm.controls.uploadedBy?.dirty && editForm.controls.uploadedBy?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.uploadedBy?.errors?.required" jhiTranslate="entity.validation.required">
@@ -87,7 +87,7 @@
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.publishedDate" for="field_publishedDate">Published Date</label>
                     <div class="d-flex">
                         <input id="field_publishedDate" type="datetime-local" class="form-control" name="publishedDate" [(ngModel)]="publishedDate"
-                        required/>
+                               readonly/>
                     </div>
                     <div [hidden]="!(editForm.controls.publishedDate?.dirty && editForm.controls.publishedDate?.invalid)">
                         <small class="form-text text-danger"
