--- a/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
@@ -11,7 +11,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckClaim.description">Description</span></dt>
                 <dd>
-                    <span>{{claim.description}}</span>
+                    <span [innerHtml]="claim.description"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckClaim.claimDate">Claim Date</span></dt>
                 <dd>
