--- a/src/main/webapp/app/entities/factcheck/claim/claim.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim.component.html
@@ -31,7 +31,7 @@
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="claim"><span jhiTranslate="gatewayApp.factcheckClaim.claim">Claim</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.factcheckClaim.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="description"><span jhiTranslate="gatewayApp.factcheckClaim.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="claimDate"><span jhiTranslate="gatewayApp.factcheckClaim.claimDate">Claim Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="claimSource"><span jhiTranslate="gatewayApp.factcheckClaim.claimSource">Claim Source</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="checkedDate"><span jhiTranslate="gatewayApp.factcheckClaim.checkedDate">Checked Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -51,7 +51,7 @@
             <tr *ngFor="let claim of claims ;trackBy: trackId">
                 <td><a [routerLink]="['/claim', claim.id, 'view' ]">{{claim.id}}</a></td>
                 <td>{{claim.claim}}</td>
-                <td>{{claim.description}}</td>
+               <!-- <td>{{claim.description}}</td>-->
                 <td>{{claim.claimDate | date:'mediumDate'}}</td>
                 <td>{{claim.claimSource}}</td>
                 <td>{{claim.checkedDate | date:'mediumDate'}}</td>
