--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
@@ -15,7 +15,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.introduction">Introduction</span></dt>
                 <dd>
-                    <span>{{factcheck.introduction}}</span>
+                    <span [innerHtml]="factcheck.introduction"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.summary">Summary</span></dt>
                 <dd>
