--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -22,8 +22,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="claim.description" required/>
+                    <quill-editor [(ngModel)]="claim.description" name="description" id="field_description" ></quill-editor>
                     <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.description?.errors?.required" jhiTranslate="entity.validation.required">
