--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -33,8 +33,7 @@
                 </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction" for="field_introduction">Introduction</label>
-                    <input type="text" class="form-control" name="introduction" id="field_introduction"
-                           [(ngModel)]="factcheck.introduction" />
+                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction"></quill-editor>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.summary" for="field_summary">Summary</label>
