--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -33,7 +33,7 @@
                 </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction" for="field_introduction">Introduction</label>
-                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction"></quill-editor>
+                    <quill-editor [(ngModel)]="factcheck.introduction" name="introduction" id="field_introduction" required></quill-editor>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.summary" for="field_summary">Summary</label>
@@ -169,9 +169,8 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" formControlName="description" name="description" id="field_description" required/>
-                                </div>
+                                    <!--<input type="text" class="form-control" formControlName="description" name="description" id="field_description" required/>-->
+                                    <quill-editor formControlName="description" name="description" id="field_description" required></quill-editor>
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.claimDate" for="field_claimDate">Claim Date</label>
