Changes for adding featured media from the Media popup

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -66,6 +66,10 @@ select.ng-invalid:not(form) {
     padding: 10px;
 }
 
+.pad-left {
+    padding-left: 80px;
+}
+
 .w-40 {
     width: 40% !important;
 }
