--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -70,6 +70,10 @@ select.ng-invalid:not(form) {
     padding-left: 80px;
 }
 
+.pad-up-bottom {
+    padding: 10px 0px;
+}
+
 .w-40 {
     width: 40% !important;
 }
