--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
@@ -63,7 +63,7 @@
                 <td>{{factcheck.updates}}</td>
                 <td>{{factcheck.slug}}</td>
                 <td>{{factcheck.password}}</td>
-                <td>{{factcheck.featuredMedia}}</td>
+                <td><img src={{factcheck.featuredMedia}} alt="" width="100" height="100"></td>
                 <td>{{factcheck.subTitle}}</td>
                 <td>{{factcheck.createdDate | date:'medium'}}</td>
                 <td class="text-right">
