--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -65,7 +65,7 @@
                             Upload Media
                         </span>
                     </button>
-                    {{ post.featuredMedia }}
+                    <img src={{post.featuredMedia}} alt="" width="100" height="100">
                     <div *ngIf="getImageSrcUrl()">
                         <span [(ngModel)]="post.featuredMedia" name="featuredMedia" ngDefaultControl></span>
                     </div>
