--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -63,7 +63,7 @@
                 <td>{{post.updates}}</td>
                 <td>{{post.slug}}</td>
                 <td>{{post.password}}</td>
-                <td>{{post.featuredMedia}}</td>
+                <td><img src={{post.featuredMedia}} alt="" width="100" height="100"></td>
                 <td>{{post.subTitle}}</td>
                 <td>{{post.createdDate | date:'medium'}}</td>
                 <td>
