--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -132,7 +132,7 @@
                             Upload Media
                         </span>
                     </button>
-                    {{ factcheck.featuredMedia }}
+                    <img src={{factcheck.featuredMedia}} alt="" width="100" height="100">
                     <div *ngIf="getImageSrcUrl()">
                         <span [(ngModel)]="factcheck.featuredMedia" name="featuredMedia" ngDefaultControl></span>
                     </div>
@@ -159,6 +159,31 @@
                         </small>
                     </div>
                 </div>-->
+
+                <div class="form-group">
+                    <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
+                    <select class="form-control" id="field_tag" multiple name="tag" [(ngModel)]="factcheck.tags">
+                        <option [ngValue]="getSelected(factcheck.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
+                    <select class="form-control" id="field_category" multiple name="category" [(ngModel)]="factcheck.categories">
+                        <option [ngValue]="getSelected(factcheck.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
+                    <select class="form-control" id="field_degaUser" multiple name="degaUser" [(ngModel)]="factcheck.degaUsers" required>
+                        <option [ngValue]="getSelected(factcheck.degaUsers, degaUserOption)" *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">{{degaUserOption.displayName}}</option>
+                    </select>
+                </div>
+                <div [hidden]="!(editForm.controls.degaUser?.dirty && editForm.controls.degaUser?.invalid)">
+                    <small class="form-text text-danger"
+                           [hidden]="!editForm.controls.degaUser?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                    </small>
+                </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.factcheckFactcheck.claim" for="field_claim">Claim</label>
                     <select class="form-control" id="field_claim" multiple name="claim" [(ngModel)]="factcheck.claims">
