--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -40,9 +40,22 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.iconURL" for="field_iconURL">Icon URL</label>
-                    <input type="text" class="form-control" name="iconURL" id="field_iconURL"
-                        [(ngModel)]="rating.iconURL" />
+                    <!-- <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.iconURL" for="field_iconURL">Icon URL</label>
+                     <input type="text" class="form-control" name="iconURL" id="field_iconURL"
+                         [(ngModel)]="rating.iconURL" />-->
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.iconURL" for="field_featuredMedia">Icon URL</label>
+                    <button id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
+                            [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
+                            replaceUrl="true" type="button">
+                        <fa-icon [icon]="'plus'"></fa-icon>
+                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
+                            Upload Media
+                        </span>
+                    </button>
+                    <img src={{rating.iconURL}} alt="" width="100" height="100">
+                    <div *ngIf="getImageSrcUrl()">
+                        <span [(ngModel)]="rating.iconURL" name="iconURL" ngDefaultControl></span>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.isDefault" for="field_isDefault">Is Default</label>
