--- a/src/main/webapp/app/entities/core/media/media-update.component.html
+++ b/src/main/webapp/app/entities/core/media/media-update.component.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="media.name" (change)="bindSlug($event)" readonly/>
+                        [(ngModel)]="media.name" readonly/>
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
