--- a/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
+++ b/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
@@ -3,6 +3,21 @@
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
             (click)="clear()">&times;</button>
 </div>
+<div class="row pad">
+    <div class="col-sm-12">
+        <form name="searchForm" class="form-inline">
+            <div class="input-group w-100 mt-3">
+                <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.coreMedia.home.search' | translate }}">
+                <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
+                    <fa-icon [icon]="'search'"></fa-icon>
+                </button>
+                <button class="input-group-append btn btn-danger" (click)="clearSearch()" *ngIf="currentSearch">
+                    <fa-icon [icon]="'trash-alt'"></fa-icon>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
 <div class="modal-body">
     <div class="pad-left" *ngIf="media">
         <div class="row">
