--- a/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
+++ b/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
@@ -21,13 +21,9 @@
 <div class="modal-body">
     <div class="pad-left" *ngIf="media">
         <div class="row">
-            <div *ngFor="let media of media;trackBy: trackId">
-                <div class="col-sm-3">
-                    <div (click)="uploadImage(media.url)">
-                        <img src={{media.url}} alt="Image" width="100" height="100">
-                        {{media.name}}
-                    </div>
-                </div>
+            <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3" (click)="uploadImage(media.url)">
+                <img src={{media.url}} alt="Image" width="100" height="100">
+                <div>{{media.name}}</div>
             </div>
         </div>
     </div>
