--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
@@ -45,6 +45,7 @@
             <th jhiSortBy="featuredMedia"><span jhiTranslate="gatewayApp.factcheckFactcheck.featuredMedia">Featured Media</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="subTitle"><span jhiTranslate="gatewayApp.factcheckFactcheck.subTitle">Sub Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.factcheckFactcheck.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="statusName"><span jhiTranslate="gatewayApp.corePost.status">Status</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -66,6 +67,7 @@
                 <td><img src={{factcheck.featuredMedia}} alt="" width="100" height="100"></td>
                 <td>{{factcheck.subTitle}}</td>
                 <td>{{factcheck.createdDate | date:'medium'}}</td>
+                <td>{{factcheck.statusName}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
